[package]
name = "relayon"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }
webrtc-unreliable = "0.3"

ed25519-dalek = "1.0.1" # for signing and verifying
getrandom = "0.2"

wasm-bindgen-futures = "0.4"
js-sys = "0.3"


[features]
default = ["wasm-bindgen"]

